# My-MPRPC

./: .gitignore  CMakeLists.txt  README.md  codec_test  registry_test  serialize_test  service_test  transport_test
example/: rpc_client_demo.cpp  rpc_server_demo.cpp
include/: buffer.h  calculator_service.h  frame_codec.h  load_balancer.h  message_handler.h  registry.h  registry_factory.h  rpc_client.h  rpc_protocol_helper.h  rpc_serser.h  serializer.h  serializer_factory.h  serializer_manager.h  service_dispatcher.h  tcp_client.h  tcp_connection.h  tcp_server.h  thread_pool.h  transport.h
mini_rpc/: CalculatorService.h  GenerateRpcClient.cc  README.md  buffer.h  parse_proto.cc  rpc_client.cc  rpcclient.h  rpcexception.h  rpcservice.h  stubsample.h  sum.pb.cc  sum.pb.h  sum.proto  tcpserver.h
mini_zookeeper/: Consumer.cpp  Provider.cpp  Registry.cpp
proto/: calculator.pb.cc  calculator.pb.h  calculator.proto  rpc_protocol.pb.cc  rpc_protocol.pb.h  rpc_protocol.proto
service/: calculator_service.cpp
src/codec/: frame_codec.cpp  message_handler.cpp
src/core/: rpc_client.cpp  rpc_server.cpp
src/load_balancer/: README.md  consistent_hash_load_balancer.cpp  least_connection_load_balancer.cpp  load_balancer_factory.cpp  round_robin_load_balancer.cpp  weighted_round_robin_load_balancer.cpp
src/registry/: registry_factory.cpp  zookeeper_registry.cpp
src/serializer/: json_serializer.cpp  protobuf_serializer.cpp  serializer_factory.cpp  serializer_manager.cpp
src/service/: calculator_service.cpp  service_dispatcher.cpp
src/transport/: tcp_client.cpp  tcp_connection.cpp  tcp_server.cpp
src/utils/: buffer.cpp  rpc_protocol_helper.cpp  thread_pool.cpp
test/codec/: codec_test.cpp
test/protobuf/: test.pb.cc  test.pb.h  test.proto
test/registry/: test_registry.cpp
test/serializer/: serializer_test.cpp
test/service/: test_calculator_service.cpp
test/transport/: transport_test.cpp
